<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ClientePessoaJuridicaActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPessoaJuridica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/txtPessoaJuridica"
        android:textColor="@color/colorAzul"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCnpj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtCnpj"
        android:textColor="@color/colorVerde"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/txtHintCnpj" />

    <TextView
        android:id="@+id/txtRazaoSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtRazaoSocial"
        android:textColor="@color/colorVerde"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editRazaoSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/txtHintRazaoSocial" />

    <TextView
        android:id="@+id/txtDataAbertura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtDataAbertura"
        android:textColor="@color/colorVerde"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDataAbertura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/txtHintDataAbertura" />

    <CheckBox
        android:id="@+id/ckSimplesNacional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:onClick="simplesNacional"
        android:text="@string/txtSimplesNacional"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/ckMei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:onClick="mei"
        android:text="@string/txtMei"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSalvarContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnSalvarContinuar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:onClick="voltaClienteVip"
        android:text="@string/btnVoltar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnCancelar" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>