<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ClientePessoaJuridicaActivity">

    <!-- Cabeçalho -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryColor"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:src="@mipmap/ic_novo_cadastro" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtAppName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtPessoaJuridica"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtPessoaJuridica"
                        android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Formulário -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primaryDarkColor"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCnpj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtCnpj"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editCnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/txtHintCnpj"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtRazaoSocial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtRazaoSocial"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editRazaoSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/txtHintRazaoSocial"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtDataAbertura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtDataAbertura"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editDataAbertura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/txtHintDataAbertura"
                android:inputType="date" />

            <CheckBox
                android:id="@+id/ckSimplesNacional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:onClick="simplesNacional"
                android:text="@string/txtSimplesNacional"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/ckMei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:onClick="mei"
                android:text="@string/txtMei"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSalvarContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:text="@string/btnSalvarContinuar"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="@color/primaryTextColor" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <!-- Botões -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primaryColor"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:onClick="voltaClienteVip"
                android:text="@string/btnVoltar"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/btnCancelar"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>